# python-template-simple

./: pyproject.toml
